--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 <video class="absolute top-0 left-0 w-full h-full object-cover" 
                     autoplay 
                     loop 
-                     
+                    muted 
                     playsinline>
                     <source src="assets/video/ssstik.io_@silentrefuges_1757327464637.mp4" type="video/mp4">
                 </video>
